updated the form so it is working

--- a/app/views/staff_members/_form.html.erb
+++ b/app/views/staff_members/_form.html.erb
@@ -1,13 +1,18 @@
 <%= form_for(@staff_member) do |f| %>
-  <div class="row"><%= f.label :name %></div>
-  <div class="row><%= f.text_field :name %></div>
+<div class="row">
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+</div>
+<div class="row">
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+</div>
 
-  <div class="row"><%= f.label :email %></div>
-  <div class="row><%= f.text_field :email %></div>
+<div class="row">
+  <%= f.label :phone %>
+  <%= f.text_field :phone %>
+</div>
 
-  <div class="row"><%= f.label :phone %></div>
-  <div class="row><%= f.text_field :phone %></div>
-
-  <%= f.submit %>
+<%= f.submit %>
 
 <% end %>
