--- a/app/views/staff_members/show.html.erb
+++ b/app/views/staff_members/show.html.erb
@@ -8,5 +8,6 @@
   <div class="row vertical-double-inner">
     Your Phone Number on Record is <%= @staff_member.phone %>
   </div>
-  You can edit your profile here
+  You can edit your profile here 
+  <%= button_to 'Edit', edit_staff_member_path(id: @staff_member.id), method: :get %>
 </div>
