added some params to link_to

--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -13,6 +13,11 @@
       </div>
     </div>
     <% end %>
+
+    <div class="row">
+      <h2> Create new staff member </h2>
+      <%= render 'staff_members/form' %>
+    </div>
   </div>
 
 </div>
