--- a/app/views/staff_members/edit.html.erb
+++ b/app/views/staff_members/edit.html.erb
@@ -1,1 +1,2 @@
 <%= render 'form' %>
+<%= link_to 'Update', {:controller => "staff_members", :action => "update", :manager_id => @manager.id}, method: :patch%>
